# rquants

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md  plan.md
.github/workflows/: ci.yml
examples/: README.md  basic_usage.rs  financial_calculations.rs  information_and_data.rs  physics_calculations.rs  radiation_and_light.rs  space_and_mass.rs  thermal.rs
src/: lib.rs  macros.rs  prelude.rs
src/core/: dimension.rs  dimensionless.rs  error.rs  macros.rs  mod.rs  quantity.rs  quantity_range.rs  ratio.rs  unit.rs
src/electro/: capacitance.rs  conductivity.rs  electric_charge.rs  electric_current.rs  electric_potential.rs  electrical_conductance.rs  electrical_resistance.rs  inductance.rs  magnetic_flux.rs  magnetic_flux_density.rs  mod.rs  resistivity.rs
src/energy/: energy.rs  energy_density.rs  mod.rs  molar_energy.rs  power.rs  power_density.rs  power_ramp.rs  specific_energy.rs
src/information/: data_rate.rs  information.rs  mod.rs
src/market/: currency.rs  exchange_rate.rs  mod.rs  money.rs  price.rs
src/mass/: area_density.rs  chemical_amount.rs  density.rs  mass.rs  mod.rs  moment_of_inertia.rs
src/motion/: acceleration.rs  force.rs  mod.rs  momentum.rs  pressure.rs  velocity.rs
src/photo/: illuminance.rs  luminance.rs  luminous_energy.rs  luminous_exposure.rs  luminous_flux.rs  luminous_intensity.rs  mod.rs
src/radio/: activity.rs  dose.rs  irradiance.rs  mod.rs  particle_flux.rs  radiance.rs  radiant_intensity.rs  spectral_irradiance.rs  spectral_power.rs
src/space/: angle.rs  area.rs  (+4 more)
tests/: ordering_properties.rs  quantity_properties.rs
(+10 files in other folders)
